--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -74,5 +74,16 @@ layout: default
         {% endfor %}
       </div>
     </div>
+
+  <div class="talk-details">
+  <h2>{{ page.title }}</h2>
+  <p><strong>Date:</strong> {{ page.date | date: "%B %d, %Y" }}</p>
+  <p><strong>Location:</strong> {{ page.location | join: ", " }}</p>
+  {% if page.citation %}
+    <p><strong>Citation:</strong> {{ page.citation }}</p>
+  {% endif %}
+  <p>{{ content }}</p>
+</div>
+
   {% endif %}
 </div>
